[gd_scene load_steps=14 format=3 uid="uid://cgtv5qcbp2ity"]

[ext_resource type="Script" path="res://Scenes/UI/Menus/level_select.gd" id="1_uqogl"]
[ext_resource type="VideoStream" path="res://menuVideo.ogv" id="2_s5br0"]
[ext_resource type="Texture2D" uid="uid://bbndkq63c28v2" path="res://Assets/UI/LevelUI/Small Text/Small Icons/1.png" id="5_gnf25"]
[ext_resource type="Texture2D" uid="uid://0vfsntahrmcs" path="res://Assets/UI/LevelUI/Yellow Button/1.png" id="12_87uce"]
[ext_resource type="Theme" uid="uid://bkxmys60y8ksu" path="res://PirateTheme.tres" id="13_spvxs"]
[ext_resource type="FontFile" uid="uid://cdp1w0hkk28v7" path="res://Assets/UI/Kenney Thick.ttf" id="14_eplm0"]
[ext_resource type="Texture2D" uid="uid://3y3gsg0vcsq2" path="res://Assets/UI/Prefab/10.png" id="16_p18cd"]
[ext_resource type="Texture2D" uid="uid://xjrqa562u37g" path="res://Assets/UI/Prefab/6.png" id="18_1s6is"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3figj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3ado"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vw4vi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4l1lx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hm77"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqogl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="PanelContainer"]
modulate = Color(0.637843, 0.637843, 0.637843, 1)
layout_mode = 2
stream = ExtResource("2_s5br0")
autoplay = true
expand = true
loop = true

[node name="19" type="Sprite2D" parent="PanelContainer"]
position = Vector2(574, 326)
scale = Vector2(4, 4)
texture = ExtResource("18_1s6is")

[node name="1" type="Sprite2D" parent="PanelContainer"]
position = Vector2(356, 110)
scale = Vector2(4.5, 4.5)
texture = ExtResource("12_87uce")

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 339.0
offset_top = 91.0
offset_right = 378.0
offset_bottom = 119.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_3figj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3ado")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vw4vi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l1lx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8hm77")
icon = ExtResource("5_gnf25")
expand_icon = true

[node name="11" type="Sprite2D" parent="."]
position = Vector2(431, 231)
scale = Vector2(4, 4)
texture = ExtResource("12_87uce")

[node name="12" type="Sprite2D" parent="."]
position = Vector2(551, 231)
scale = Vector2(4, 4)
texture = ExtResource("12_87uce")

[node name="13" type="Sprite2D" parent="."]
position = Vector2(432, 329)
scale = Vector2(4, 4)
texture = ExtResource("12_87uce")

[node name="14" type="Sprite2D" parent="."]
position = Vector2(552, 329)
scale = Vector2(4, 4)
texture = ExtResource("12_87uce")

[node name="15" type="Sprite2D" parent="."]
position = Vector2(432, 424)
scale = Vector2(4, 4)
texture = ExtResource("12_87uce")

[node name="lv1Button" type="Button" parent="."]
layout_mode = 2
offset_left = 415.0
offset_top = 217.0
offset_right = 449.0
offset_bottom = 243.0
theme = ExtResource("13_spvxs")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("14_eplm0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3figj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3ado")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vw4vi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l1lx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8hm77")
text = "1"
expand_icon = true

[node name="lv2Button" type="Button" parent="."]
layout_mode = 2
offset_left = 535.0
offset_top = 217.0
offset_right = 569.0
offset_bottom = 240.0
theme = ExtResource("13_spvxs")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("14_eplm0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3figj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3ado")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vw4vi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l1lx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8hm77")
text = "2"
expand_icon = true

[node name="lv3Button" type="Button" parent="."]
layout_mode = 2
offset_left = 416.0
offset_top = 316.0
offset_right = 450.0
offset_bottom = 342.0
theme = ExtResource("13_spvxs")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("14_eplm0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3figj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3ado")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vw4vi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l1lx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8hm77")
text = "3"
expand_icon = true

[node name="lv4Button" type="Button" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 316.0
offset_right = 570.0
offset_bottom = 339.0
theme = ExtResource("13_spvxs")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("14_eplm0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3figj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3ado")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vw4vi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l1lx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8hm77")
text = "4"
expand_icon = true

[node name="lv5Button" type="Button" parent="."]
layout_mode = 2
offset_left = 415.0
offset_top = 411.0
offset_right = 449.0
offset_bottom = 437.0
theme = ExtResource("13_spvxs")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("14_eplm0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3figj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3ado")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vw4vi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l1lx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8hm77")
text = "5"
expand_icon = true

[node name="10" type="Sprite2D" parent="."]
position = Vector2(738, 324)
scale = Vector2(6, 6)
texture = ExtResource("16_p18cd")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 652.0
offset_top = 310.0
offset_right = 824.0
offset_bottom = 339.0
theme = ExtResource("13_spvxs")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("14_eplm0")
theme_override_font_sizes/font_size = 25
text = "Niveles"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="lv1Button" to="." method="_on_lv_1_button_pressed"]
[connection signal="pressed" from="lv2Button" to="." method="_on_lv_2_button_pressed"]
[connection signal="pressed" from="lv3Button" to="." method="_on_lv_3_button_pressed"]
[connection signal="pressed" from="lv4Button" to="." method="_on_lv_4_button_pressed"]
